[package]
name = "Seq"
version = "0.1.0"
authors = ["Maurice van Leeuwen <maurice.vanleeuwen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portmidi = "^0.2"
structopt = "^0.3"
rand = "^0.7"
termion = "^1.5"
toml = "^0.5"
